adding exisiting azure ml studio files

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,6 @@ s04e06/fastai-gbms-decisionTrees.ipynb
 s04e06/submission.csv
 s04e06/catboost_info 
 s04e06/academic_dataset 
-
+s04e06/academic-success-dataset.zip
 
 
