--- a/s04e06/requirements.txt
+++ b/s04e06/requirements.txt
@@ -316,6 +316,7 @@ safetensors==0.4.3
 scikit-image==0.20.0
 scikit-learn==1.3.2
 scipy==1.9.1
+seaborn==0.13.2
 SecretStorage==3.3.3
 Send2Trash==1.8.3
 sentencepiece==0.2.0
